# fcitx5-vinput

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  README_zh.md  THIRD_PARTY_NOTICES.md  flake.nix  justfile  notification.json
.github/: FUNDING.yml
.github/workflows/: channels.yml  ci.yml  docs.yml  release.yml  vosk-runtime.yml
.kiro/settings/: mcp.json
asr-providers/: README.md  elevenlabs_speech_to_text.py
data/: default-config.json  org.fcitx.Vinput.service  org.fcitx.Vinput.service.in  vinput-scenes.json
data/asr-providers/: README.md  doubao_speech_to_text.py  elevenlabs_speech_to_text.py  openai_compatible_speech_to_text.py
data/llm-adaptors/: README.md
docker/vosk-runtime-manylinux/: Dockerfile  build-runtime.sh
docs/: development-notes.md  sherpa-capi-vinput-model-draft.md
extensions/: README.md
extensions/asr/: elevenlabs_speech_to_text.py
extensions/llm/: mtranserver_proxy.py
i18n/: vinput-gui_zh_CN.ts
llm-adaptors/: README.md  mock_llm_adaptor.py
packaging/arch/: PKGBUILD.in
packaging/debian/: control  rules
packaging/fedora/: fcitx5-vinput.spec
packaging/flatpak/: ci-manifest.yaml  org.fcitx.Fcitx5.Addon.Vinput.yaml
packaging/opensuse/: fcitx5-vinput.spec
patches/: kaldi-openfst-ngram.patch
po/: CMakeLists.txt  fcitx5-vinput.pot  zh_CN.po  zh_CN.po~
scripts/: build-sherpa-onnx.sh  build-vosk-from-source.sh  build-vosk.sh  check-i18n.py  check-kaldi-build-flags.sh  check-kaldi-openfst-patch.sh  check-vosk-build-script.sh  ci-install-build-deps.sh  ci-verify-channel-install.sh  install-vosk-runtime.sh  mtranserver-proxy.py  package-vosk-runtime.sh  render-arch-pkgbuild.sh  sherpa-onnx-vars.sh  vosk-runtime-vars.sh  vosk-vars.sh
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/public/: robots.txt
site/src/components/: ReleaseDownloads.astro  SiteTitle.astro
site/src/styles/: custom.css
src/addon/: CMakeLists.txt  notifier_dbus_object.h  vinput-addon.conf.in  vinput.conf  vinput.cpp  vinput.h  vinput_dbus.cpp  vinput_keyevent.cpp  vinput_menu.cpp
src/addon/core/: vinput.cpp  vinput.h
src/addon/dbus/: notifier_dbus_object.h  vinput_dbus.cpp
src/addon/input/: vinput_keyevent.cpp
src/addon/menu/: vinput_menu.cpp
src/cli/: CMakeLists.txt  action.h  command_adaptor.cpp  command_adaptor.h  command_asr.cpp  command_asr.h  command_daemon.cpp  command_init.cpp  command_model.cpp  command_model.h  command_recording.cpp  command_registry.cpp  command_registry.h  command_status.cpp  dbus_client.cpp  dbus_client.h  editor_utils.cpp  main.cpp  systemd_client.cpp  systemd_client.h
src/cli/config/: asr_actions.cpp  asr_actions.h  device_actions.cpp  device_actions.h  llm_actions.cpp  llm_actions.h  register.cpp  register_asr.cpp  register_device.cpp  register_llm.cpp  register_scene.cpp  scene_actions.cpp  scene_actions.h
src/cli/control/: action.h  daemon_actions.cpp  daemon_actions.h  recording_actions.cpp  register.cpp  register.h  register_daemon.cpp  register_recording.cpp
src/cli/runtime/: dbus_client.cpp  dbus_client.h  systemd_client.cpp  systemd_client.h
src/cli/utils/: formatter.cpp  resource_utils.cpp  resource_utils.h
src/common/: CMakeLists.txt  adaptor_manager.cpp  adaptor_manager.h  asr_defaults.h  asr_provider_script.cpp  asr_provider_script.h  config.h.in  config_path.cpp  core_config.cpp  core_config.h  dbus_interface.h  downloader.cpp  error_info.cpp  error_info.h  file_utils.cpp  i18n.cpp  model_manager.cpp  model_manager.h  model_repository.cpp  model_repository.h  path_utils.cpp  path_utils.h  postprocess_scene.cpp  postprocess_scene.h  process_utils.cpp  process_utils.h  recognition_result.cpp  recognition_result.h  registry_cache.cpp  registry_cache.h  registry_i18n.cpp  script_resource.cpp  vinput_config.cpp  vinput_config.h
src/common/asr/: model_manager.cpp  model_manager.h
src/common/audio/: pipewire_device.cpp
src/common/config/: core_config.h  core_config_json.cpp  core_config_normalize.cpp  core_config_resolve.cpp  core_config_types.h  core_config_validate.cpp  vinput_config.cpp  vinput_config.h
src/daemon/: CMakeLists.txt  asr_engine.cpp  asr_engine.h  asr_provider.cpp  asr_provider.h  audio_capture.cpp  audio_capture.h  dbus_service.cpp  dbus_service.h  main.cpp  model_manager.cpp  model_manager.h  post_processor.cpp  post_processor.h  vad_trimmer.cpp
src/daemon/asr/: asr_config.h  asr_engine.cpp  asr_engine.h  sherpa_json_helpers.h  vad_trimmer.cpp  vad_trimmer.h
src/daemon/asr/backends/: command_batch_backend.cpp  command_batch_backend.h  command_streaming_backend.cpp  command_streaming_backend.h  sherpa_offline_backend.cpp  sherpa_offline_backend.h  sherpa_streaming_backend.cpp  sherpa_streaming_backend.h  vosk_offline_backend.cpp  vosk_streaming_backend.cpp  vosk_streaming_backend.h
src/daemon/asr/runtime/: backend_factory.cpp  backend_factory.h  recognition_contract.h  recognition_session_manager.cpp  recognition_session_manager.h
src/daemon/audio/: audio_capture.cpp  audio_capture.h  audio_utils.cpp  audio_utils.h
src/daemon/postprocess/: post_processor.cpp
src/daemon/runtime/: daemon_runtime_controller.cpp  daemon_runtime_controller.h  dbus_service.cpp  dbus_service.h  recognition_pipeline.cpp  recognition_pipeline.h
src/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/gui/app/: main.cpp  mainwindow.cpp  mainwindow.h
src/gui/dialogs/: adapter_dialog.cpp  adapter_dialog.h  asr_provider_dialog.cpp  asr_provider_dialog.h
src/gui/pages/control/: control_page.cpp  control_page.h
src/gui/pages/hotwords/: hotword_page.cpp  hotword_page.h
src/gui/pages/llm/: llm_page.cpp  llm_page.h
src/gui/pages/resources/: resource_page.cpp  resource_page.h
src/gui/pages/scenes/: scene_page.cpp  scene_page.h
src/gui/utils/: cli_runner.cpp  cli_runner.h  config_manager.cpp  config_manager.h  download_worker.cpp  download_worker.h  gui_helpers.cpp  gui_helpers.h  i18n_cache.cpp  i18n_cache.h
systemd/: vinput-daemon.service  vinput-daemon.service.in
tests/: CMakeLists.txt  model_manager_moonshine_test.cpp
(+47 files in other folders)
